# svg2librepcb

./: Cargo.toml  README.md
inkscape/: svg2librepcb.inx
src/: main.rs
