[package]
name = "svg2librepcb"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "3", features = ["std", "derive"], default-features = false }
svg2polylines = "0.7"
uuid = { version = "1.1", features = ["v4"] }
